# JiPP2

./: CMakeLists.txt  README.md
E1NoCopyingConstructor/include/: Point.h
E1NoCopyingConstructor/src/: Point.cpp
LAB1/allocation_basics/: CMakeLists.txt
allocation_basics/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
lab10/: CMakeLists.txt
lab10/include/: templates.h
lab10/src/: main.cpp
lab11/: CMakeLists.txt
lab11/include/: unique_ptr.h
lab11/src/: main.cpp  unique_ptr.cpp
lab3Homework/: CMakeLists.txt
lab3Homework/include/: ExceptionHandling.h  area.h  pointers.h  random-Change_Reverse.h
lab3Homework/src/: ExceptionHandling.cpp  area.cpp  main.cpp  pointers.cpp  random-Change-Reverse.cpp
lab4/: CMakeLists.txt
lab4/include/: Cuboid.h  Destructor.h  Figura.h  Punkt.h  QuadraticFunction.h  Sphere.h  Student.h  cuboid.h  functions.h
lab4/src/: Cuboid.cpp  Destructor.cpp  Figura.cpp  Punkt.cpp  QuadraticFunction.cpp  Sphere.cpp  Student.cpp  cuboid.cpp  functions.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/include/: Car.h
lab5/src/: Car.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/include/: Node.h  Vector.h
lab6/src/: Node.cpp  Vector.cpp  main.cpp
lab7/: CMakeLists.txt
lab7/include/: Circle.h  Figura.h  Ostroslup.h  Rectangle.h  Szescian.h
lab7/src/: Circle.cpp  Figura.cpp  Ostroslup.cpp  (+3 more)
lab8/: CMakeLists.txt
lab9/: CMakeLists.txt
matrixApp/: CMakeLists.txt
matrixLib/: CMakeLists.txt
projektKoncowy/: CMakeLists.txt
simpleCalc/: CMakeLists.txt
(+29 files in other folders)
