cmake_minimum_required(VERSION 3.20)
project(JiPP2)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(lab3Homework)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(lab4)
add_subdirectory(e1NoCopyingConstructor)
add_subdirectory(lab5)
add_subdirectory(lab6)
