cmake_minimum_required(VERSION 3.20)
project(lab2Homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab2Homework src/main.cpp src/area.cpp include/area.h src/random-Change-Reverse.cpp include/random-Change_Reverse.h src/pointers.cpp include/pointers.h src/ExceptionHandling.cpp include/ExceptionHandling.h)