cmake_minimum_required(VERSION 3.20)
project(lab4)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab4 src/main.cpp src/functions.cpp include/functions.h src/Cuboid.cpp include/Cuboid.h src/Sphere.cpp include/Sphere.h src/QuadraticFunction.cpp include/QuadraticFunction.h src/Student.cpp include/Student.h src/Punkt.cpp include/Punkt.h src/Figura.cpp include/Figura.h src/Destructor.cpp include/Destructor.h)



